objects/TEMPLOG__c.object
<CustomObject>
    <fields>
        <fullName>Attraversamento__c</fullName>
        <label>Attraversamento</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataInserimento__c</fullName>
        <label>DataInserimento</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desc__c</fullName>
        <label>Desc</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CPU_Time_Limit__c</fullName>
        <label>CPU Time Limit</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OF_CPU_Time__c</fullName>
        <label>CPU Time</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OF_Tentativi__c</fullName>
        <label>Tentativi</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TL_codice_ordine_olo__c</fullName>
        <label>Codice Ordine OLO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tempi_Parziali__c</fullName>
        <label>Tempi Parziali</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Comunicazione_String__c</fullName>
        <label>Tipo_Comunicazione_String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Comunicazione__c</fullName>
        <label>Tipo_Comunicazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeTrigger__c</fullName>
        <label>TypeTrigger</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>TEMPLOG</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Desc__c</columns>
        <columns>Class__c</columns>
        <columns>Method__c</columns>
        <columns>Timestamp__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>TEMPLOG Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TEMPLOG</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>